--- a/gb/16/7/6/n8072228.md
+++ b/gb/16/7/6/n8072228.md
@@ -1,31 +1,31 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ylnu2943/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ylnu2943/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ylnu2943/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ylnu2943/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ylnu2943/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ylnu2943/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ylnu2943/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中国跨省垃圾倾倒成黑色利益链</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/07/ttl7day1cF_1-e1467815069251-600x399.jpg" />
 <h6> 中国人正在为追随中共盲目追求经济发展承受环境代价。图为太湖附近堆积如山的垃圾。（微博图片）
 </h6>
 <hr>
-	<p>【大纪元2016年07月06日讯】（大纪元记者徐若水综合报导）<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>南方暴雨天气引发的汛情持续造成人员伤亡和财产损失之际，江苏苏州警方证实正在调查一起发生在太湖的偷倒<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE.md#1">垃圾</a>事件。大量垃圾堆积恐不利防汛，同时再度引发对中国环境<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E6%B1%A1%E6%9F%93.md#1">污染</a>问题的关注。</p>
+	<p>【大纪元2016年07月06日讯】（大纪元记者徐若水综合报导）<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>南方暴雨天气引发的汛情持续造成人员伤亡和财产损失之际，江苏苏州警方证实正在调查一起发生在太湖的偷倒<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE.md#1">垃圾</a>事件。大量垃圾堆积恐不利防汛，同时再度引发对中国环境<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B1%A1%E6%9F%93.md#1">污染</a>问题的关注。</p>
 <p>中央气象台5日改发最低级别暴雨蓝色预警，但江苏中部预计仍将有大到暴雨。太湖目前已超出警戒水位，水利部门警告还将继续上涨。太湖除要面对既有汛情外，目前集结在西太平洋的台风尼伯特预计最快7日也将登陆浙闽沿海，给太湖流域带来暴雨、洪水、高潮，防汛形势严峻。</p>
-<figure id="attachment_8072293" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-8072293" src="https://i.epochtimes.com/assets/uploads/2016/07/ttl7dayoi8_3-450x280.jpg" alt=" 中国人正在为追随中共盲目追求经济发展承受环境代价。图为太湖附近堆积如山的垃圾。（微博图片）" width="450" b="280" /><figcaption class="wp-caption-text"><ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>人正在为追随中共盲目追求经济发展承受环境代价。图为太湖附近堆积如山的<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE.md#1">垃圾</a>。（微博图片）</figcaption></figure>
+<figure id="attachment_8072293" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-8072293" src="https://i.epochtimes.com/assets/uploads/2016/07/ttl7dayoi8_3-450x280.jpg" alt=" 中国人正在为追随中共盲目追求经济发展承受环境代价。图为太湖附近堆积如山的垃圾。（微博图片）" width="450" b="280" /><figcaption class="wp-caption-text"><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD.md#1">中国</a>人正在为追随中共盲目追求经济发展承受环境代价。图为太湖附近堆积如山的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9E%83%E5%9C%BE.md#1">垃圾</a>。（微博图片）</figcaption></figure>
 <p>而题为《震惊！愤怒！上海约2万吨生活垃圾，偷倒苏州太湖西山岛！》的消息近日在微信朋友圈和微博上热传。但直到消息在互联网上传开数天后，苏州警方才公开证实此事。警方7月4日表示，涉案垃圾达4千吨，分别装载在8艘来自上海嘉定的船只上，停靠于太湖西山岛。</p>
 <figure id="attachment_8072285" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-8072285" src="https://i.epochtimes.com/assets/uploads/2016/07/ttl7dayf6I_2-450x296.jpg" alt=" 中国人正在为追随中共盲目追求经济发展承受环境代价。图为太湖附近堆积如山的垃圾。（微博图片）" width="450" b="296" /><figcaption class="wp-caption-text">中国人正在为追随中共盲目追求经济发展承受环境代价。图为太湖附近堆积如山的垃圾。（微博图片）</figcaption></figure>
 <p>&nbsp;</p>
 <p><strong>戒毒所成垃圾场<br />
 </strong><br />
-据苏州太湖国家旅游度假区管理委员会通报，这8艘船只1日下午起停靠到西山岛江苏省太湖强制隔离戒毒所内的码头，装载的疑似生活垃圾，同时夹杂建筑垃圾。有关人员试图将垃圾<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E5%80%BE%E5%80%92.md#1">倾倒</a>至戒毒所内废弃宕口堤岸上，但“与太湖水面隔离”。</p>
+据苏州太湖国家旅游度假区管理委员会通报，这8艘船只1日下午起停靠到西山岛江苏省太湖强制隔离戒毒所内的码头，装载的疑似生活垃圾，同时夹杂建筑垃圾。有关人员试图将垃圾<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%80%BE%E5%80%92.md#1">倾倒</a>至戒毒所内废弃宕口堤岸上，但“与太湖水面隔离”。</p>
 <p>管委会当天接获戒毒所所在的蒋东村报告，并组织警方、海事、环保、城管等部门赶赴现场处置，由海事部门原地扣留8艘涉事船只，船主和联系转运垃圾的中间人也被警方控制。专家估计，戒毒所码头附近堆放的垃圾总重量超过2万吨。</p>
-<p>垃圾运送船的船主称，他们6月25日在嘉定水域苏州河段停靠后，有卡车将垃圾运来装船，26日转运到太湖的宕口附近，等待一家在附近施工的建筑公司接收，用于在建工程铺设便道。但由于雨太大而没来得及卸下来，直到7月1日才<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E5%80%BE%E5%80%92.md#1">倾倒</a>部分垃圾。</p>
+<p>垃圾运送船的船主称，他们6月25日在嘉定水域苏州河段停靠后，有卡车将垃圾运来装船，26日转运到太湖的宕口附近，等待一家在附近施工的建筑公司接收，用于在建工程铺设便道。但由于雨太大而没来得及卸下来，直到7月1日才<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%80%BE%E5%80%92.md#1">倾倒</a>部分垃圾。</p>
 <p>江苏苏州市委机关报《苏州日报》引述警方西山岛金庭镇派出所副所长卞晓和表示，船主所称的建筑公司并非镇上的公司，但有多方证据指向该公司承接戒毒所的工程。金庭镇副镇长顾丽明称，码头与堆放垃圾的空地都在戒毒所范围内，由于行政级别与管辖权问题，镇政府仍未与戒毒所取得联系。</p>
 <p><strong>水质检测受质疑</strong></p>
 <p>网上照片显示，太湖一处堤岸上满是垃圾。码头西面几百米处有一条泥路通往一处湖湾，湖湾边有一块高出水面两三层楼、占地约2,400平方米的空地，“表面上全部覆盖着各种各样的垃圾，上面停着一辆挖土机，据说是用来填埋垃圾的”。</p>
 <p>附近居民表示，6月12日起每天至少有3艘船运来垃圾，之后有卡车把垃圾拉到几百米外卸下后，用挖土机在地上填平、压实。住在附近的沈女士抱怨，垃圾运来后臭气熏天，苍蝇蚊虫满天飞，“大热天，家里不敢开窗，连饭都没办法吃”。</p>
 <p>垃圾倾倒太湖事件获证实后，江苏和上海网民反应强烈，甚至在微博上互相指骂。其他地方的网民劝架时，表示应向政府问责，要求相关部门对偷倒垃圾现象进行严惩。据悉，上海市绿化和市容管理局5日成立专项工作组配合相关部门调查，同时派专人赴苏州调查取证，承诺严肃处理相关责任人。</p>
-<p>官方还称环保部门对周边水域的抽样检测未发现异常，宕口的检测尚在进行中。网民对此表示质疑。有网民反问：“我们纳税人给环保部门的工资、奖金白发了，4千吨垃圾检测正常？”还有网民说：“垃圾里有多少有毒物质？水中的鱼虾都受到<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E6%B1%A1%E6%9F%93.md#1">污染</a>，最后又会通过各种渠道回流到老百姓的肚子里。各种不知名的疾病可能就此产生。”</p>
-<p><strong><ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E5%88%A9%E7%9B%8A%E9%93%BE.md#1">利益链</a>利润惊人</strong></p>
+<p>官方还称环保部门对周边水域的抽样检测未发现异常，宕口的检测尚在进行中。网民对此表示质疑。有网民反问：“我们纳税人给环保部门的工资、奖金白发了，4千吨垃圾检测正常？”还有网民说：“垃圾里有多少有毒物质？水中的鱼虾都受到<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B1%A1%E6%9F%93.md#1">污染</a>，最后又会通过各种渠道回流到老百姓的肚子里。各种不知名的疾病可能就此产生。”</p>
+<p><strong><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%88%A9%E7%9B%8A%E9%93%BE.md#1">利益链</a>利润惊人</strong></p>
 <p>去年6月媒体也曾披露数千吨来自上海的生活垃圾被用船偷运到江苏省无锡市惠山区洛社镇掩埋的事件，导致当地环境污染。事发后，徐国强等4名嫌疑人被无锡市区检察院批捕。该案今年已2次开庭，判决预计将于7月做出。此外，无锡12名干部因涉及该案被问责处分。</p>
-<p>中国多地近年接连发生外地垃圾跨省倾倒事件，官媒承认垃圾违规外运已形成一条黑色<ahref="https://github.com/ylnu2943/djy/blob/master/gb/tag/%E5%88%A9%E7%9B%8A%E9%93%BE.md#1">利益链</a>，城市垃圾经层层转包倒手，每层都利润惊人。一名偷倒垃圾的船主说：“运一船货约2千元，卸完货可以拿钱。我不知道是什么货，我只管运。”</p>
+<p>中国多地近年接连发生外地垃圾跨省倾倒事件，官媒承认垃圾违规外运已形成一条黑色<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%88%A9%E7%9B%8A%E9%93%BE.md#1">利益链</a>，城市垃圾经层层转包倒手，每层都利润惊人。一名偷倒垃圾的船主说：“运一船货约2千元，卸完货可以拿钱。我不知道是什么货，我只管运。”</p>
 <p>业内人士表示，从上海运到苏州或无锡，货主给的价格比普通砂石的运费要高一倍多。中间人可从中获利至少每吨30元人民币，寻找垃圾倾倒地点的人获利约每吨5元，另外卸载、填埋人员也能分得一杯羹。</p>
 <p><strong>城市垃圾陷困境<br />
 </strong><br />
@@ -54,36 +54,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/16/2/15/n4640119.md#1">大陆游客错把邮筒当垃圾桶 韩国发4语言告示</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/16/3/28/n7465383.md#1">垃圾遍地难以落脚 中国女生宿舍惊呆网民</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/16/4/1/n7482405.md#1">江泽民当年访美走垃圾道的丑闻</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/16/4/1/n7482520.md#1">中国移民涌美 大妈泳池泡脚儿童大便</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/2/15/n4640119.md#1">大陆游客错把邮筒当垃圾桶 韩国发4语言告示</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/28/n7465383.md#1">垃圾遍地难以落脚 中国女生宿舍惊呆网民</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/4/1/n7482405.md#1">江泽民当年访美走垃圾道的丑闻</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/4/1/n7482520.md#1">中国移民涌美 大妈泳池泡脚儿童大便</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/25/n10666303.md#1" target="_blank">观雨堂主：大陆高校的“秘密信息员”</a></li><li><a href="https://github.com/ylnu2943/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/24/n11136773.md#1" target="_blank">捷克参议院通过决议案 要求中共停止迫害</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/4/n11300386.md#1" target="_blank">林辉：大饥荒 中共却无偿送几内亚万吨大米</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/25/n11409005.md#1" target="_blank">法轮功反迫害 川普政府与美国国会公开声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/8/n12013466.md#1">台染疫男童的9接触者有症状 部分检验结果出炉</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12011929.md#1">【一线采访】趁解封赶紧走 武汉数万人出城</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/8/n12012723.md#1">任志强被调查 传需向中南海交代</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/6/n12009114.md#1">【最新疫情4.7】美考虑暂停对世卫的捐款</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12012172.md#1">【最新疫情4.8】川普再批世卫：故意淡化疫情</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12011319.md#1">《蝙蝠侠》男星班迪特 因中共肺炎并发症去世</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/6/n12009067.md#1">港歌手关淑怡退出演艺圈：见识最丑陋一面</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12012050.md#1">脸书帖文谈中共病毒名称 黄明志反击五毛围攻</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/5/n12005827.md#1">美国天后赞台湾防疫 网红讽中共：有钱买不到</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12009463.md#1">苏志燮亲自宣布结婚 还捐款帮助弱势儿童</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/2/n11998489.md#1">庚子流年卦 无妄卦示现2020时局</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/6/n12008426.md#1">两个现代人从地府带回来的信息</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/8/n12012857.md#1">口罩戴久耳朵痛？ 加拿大男童的护耳器有解</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/4/7/n12010421.md#1">疫情下行善 美暖男在超市为30名陌生人付账</a></li>
-<li><a href="https://github.com/ylnu2943/djy/blob/master/gb/20/3/27/n11979695.md#1">古今记载里的“另外时空”（二）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950860.md#1">以色列作家：真正的病毒是中共</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950430.md#1">【现场视频】大风吹袭 京津冀多地起火</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/19/n11953240.md#1">台湾北部高中2人确诊中共肺炎 被迫全校停课</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11950402.md#1">中国式复工：一场中共忽悠老百姓的闹剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ylnu2943/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ylnu2943/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/7/6/n8072228.htm">中国跨省垃圾倾倒成黑色利益链</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/7/6/n8072228.htm">中国跨省垃圾倾倒成黑色利益链</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ylnu2943/djy/blob/master/gb/16/7/6/n8072228.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ylnu2943/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ylnu2943/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ylnu2943/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ylnu2943/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ylnu2943/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/7/6/n8072228.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
